# genet

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/genet/: receiver.py  sender.py
tests/: expected.txt  test.txt  test_dumb.py  test_sender_non_blocking.py
