[metadata]
name = genet
description = send generators through network
author = Lucas Robidou
license = AGPLv3
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    genet
install_requires =
    websockets>=10.1
    gevent>=21.12.0
    gevent-websocket>=0.10.1
    bottle>=0.12.19
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160